--- a/Patriot/Base.lproj/Main.storyboard
+++ b/Patriot/Base.lproj/Main.storyboard
@@ -63,18 +63,10 @@
                             <outlet property="delegate" destination="kze-QZ-tiD" id="8cn-9h-rhv"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="KQX-l2-xde">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="HPl-Dk-WhE">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Z44-e9-0j9">
-                                <rect key="frame" x="16" y="7" width="83" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Config"/>
-                                <connections>
-                                    <segue destination="cRo-X4-PTt" kind="presentation" identifier="openConfig" id="B07-xn-w7C"/>
-                                </connections>
-                            </button>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="KQX-l2-xde"/>
+                    <connections>
+                        <segue destination="cRo-X4-PTt" kind="show" identifier="openConfig" id="aS3-FA-s4u"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eYb-Tk-UMt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -165,8 +157,7 @@
                             <outlet property="delegate" destination="cRo-X4-PTt" id="oJl-vV-Ac1"/>
                         </connections>
                     </tableView>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QXI-Sv-uau" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
